# chesspp

./: CMakeLists.txt  README  README.md  bld  cln  run  tst
chesspp/: CMakeLists.txt  chesspp.cpp  chesspp.hpp  chesspp_main.cpp
cmake/: Functions.cmake
libchess/: CMakeLists.txt  bishop.hpp  bishop_inline.hpp  bit_manipulation.hpp  chess.cpp  chess.hpp  game.hpp  game_context.hpp  game_context_inline.hpp  game_state.cpp  game_state.hpp  king.hpp  king_inline.hpp  knight.hpp  knight_inline.hpp  pawn.hpp  pawn_inline.hpp  piece.hpp  piece_inline.hpp  piece_map.hpp  queen.hpp  queen_inline.hpp  rook.hpp  rook_inline.hpp  san_parser.cpp  san_parser.hpp  san_parser_inline.hpp  util.cpp  util.hpp
libchessui/: CMakeLists.txt  user_interface.cpp  user_interface.hpp
test/: CMakeLists.txt  test.cpp  test.hpp  test_chess.inc
